--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,12 @@
     <string name="app_name">Recipe Center</string>
     <string name="action_settings">Settings</string>
     <string name="button_text">Click</string>
+    <string name="read">Read</string>
+    <string name="back">Back</string>
+    <string name="titre1">Chocolate Cake</string>
+    <string name="content1">
+    1) Preheat oven to 300 degrees F (150 degrees C). Grease an 8 inch round cake pan, and dust with cocoa powder.
+    2) In the top of a double boiler over lightly simmering water, melt chocolate and butter. Remove from heat, and stir in sugar, cocoa powder, eggs, and vanilla. Pour into prepared pan.
+    3) Bake in preheated oven for 30 minutes. Let cool in pan for 10 minutes, then turn out onto a wire rack and cool completely. Slices can also be reheated for 20 to 30 seconds in the microwave before serving.
+</string>
 </resources>
